Fixed vertical alignment for title.

--- a/src/webui/media/css/current/theme.css
+++ b/src/webui/media/css/current/theme.css
@@ -162,19 +162,18 @@ a:hover {
 	height: 45px;
 }
 #header .title {
+	float: left;
+	height: 100%;
 	font-size: 2.5em;
 }
-#header a {
-	/*
-	color: #666;
-	*/
+#header .title a {
+	vertical-align: middle;
 }
 #header .right {
 	float: right;
 }
 #header #user,
 #header #languages {
-	margin-bottom: 8px;
 	font-family: Verdana, sans-serif;
 	font-weight: normal;
 	font-size: 12px;
@@ -207,6 +206,7 @@ a:hover {
 /* ul#navigator ------------------------------------------------------------- */
 
 ul#navigator {
+	border-bottom: 1px solid #ccc;
 	/* -specific- NOT USED
 	background-color: #dadada;
 	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#dadada), to(#fff));
@@ -214,7 +214,6 @@ ul#navigator {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffdadada, endColorstr=#ffffffff);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffdadada, endColorstr=#ffffffff)";
 	*/
-	border-bottom: 1px solid #ccc;
 }
 ul#navigator li {
 	float: left;
@@ -233,6 +232,7 @@ ul#navigator li a {
 	text-transform: uppercase;
 }
 ul#navigator li.selected a {
+	color: #fff;
 	background-color: #7f9bca;
 	/* -specific-
 	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#7f9bca), to(#5c79aa));
@@ -240,10 +240,10 @@ ul#navigator li.selected a {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa)";
 	*/
-	color: #fff;
 }
 ul#navigator li:hover,
 ul#navigator li a:hover {
+	color: #fff;
 	background-color: #7f9bca;
 	/* -specific-
 	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#7f9bca), to(#5c79aa));
@@ -251,7 +251,6 @@ ul#navigator li a:hover {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa)";
 	*/
-	color: #fff;
 }
 
 /* div.actions -------------------------------------------------------------- */
@@ -277,6 +276,8 @@ div.actions [type='submit'] {
 }
 div.actions [type='button'].default,
 div.actions [type='submit'].default {
+	color: #fff;
+	border: 2px solid #5B80B2;
 	background-color: #7f9bca;
 	/* -specific-
 	background: -webkit-gradient(linear, 0 0%, 0 100%, from(#7f9bca), to(#5c79aa));
@@ -284,8 +285,6 @@ div.actions [type='submit'].default {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa);
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#ff7f9bca, endColorstr=#ff5c79aa)";
 	*/
-	color: #fff;
-	border: 2px solid #5B80B2;
 }
 div.actions [type='button'].default:hover,
 div.actions [type='submit'].default:hover {
